fix dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,7 +29,7 @@ body {
 
 .pom-crust {
   background-image: url("/img/crust.webp");
-  background-size: 1170px 810px;
+  background-size: 1000px 700px;
   background-repeat: no-repeat;
   background-position: center;
 }
